- Fixed extra list marker next to datasets on dataset registration page - Attempted to fix dataset list not expanding box/overflowing the page

--- a/blink_sass/pages/_page.sass
+++ b/blink_sass/pages/_page.sass
@@ -53,7 +53,6 @@
         color: #676767
         cursor: not-allowed
 
-
 #variable_edit
   li.program-tab
     width: (100% / 5)
@@ -67,3 +66,7 @@
   font-size: 14px
   span
     font-weight: 600
+
+.dataset-list
+  ul
+    list-style: none
